--- a/css/style.css
+++ b/css/style.css
@@ -9746,3 +9746,51 @@ g-5, .gy-5 {
   padding-left: 1.5rem !important;
 }
 
+
+
+
+.register .nav-tabs .nav-link:hover {
+  border: none;
+}
+.text-align {
+  margin-top: -3%;
+  margin-bottom: -9%;
+
+  padding: 10%;
+  margin-left: 30%;
+}
+.form-new {
+  margin-right: 22%;
+  margin-left: 20%;
+}
+.register-heading {
+  margin-left: 21%;
+  margin-bottom: 10%;
+  color: #e9ecef;
+}
+.register-heading h1 {
+  margin-left: 21%;
+  margin-bottom: 10%;
+  color: #e9ecef;
+}
+.register {
+  background: -webkit-linear-gradient(left, pink, white);
+  margin-top: 3%;
+  padding: 3%;
+  border-radius: 2.5rem;
+  display: none;
+}
+.btnSubmit {
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  color: #fff;
+  background-color: var(--salmon-pink);
+  border: none;
+  cursor: pointer;
+  margin-right: 6%;
+  color: rgb(246, 246, 252);
+  margin-top: 4%;
+}
+
+
